@@ -37,8 +37,6 @@ tbuilder_listbox::tbuilder_listbox(const config& cfg)
 	, footer(NULL)
 	, list_builder(NULL)
 	, list_data()
-	, linked_widgets_disabled_(
-			utils::string_bool(cfg["linked_widgets_disabled"]))
 {
 	if(const config &h = cfg.child("header")) {
 		header = new tbuilder_grid(h);
@@ -86,8 +84,6 @@ twidget* tbuilder_listbox::build() const
 
 	widget->set_vertical_scrollbar_mode(vertical_scrollbar_mode);
 	widget->set_horizontal_scrollbar_mode(horizontal_scrollbar_mode);
-
-	widget->set_linked_widgets_disabled(linked_widgets_disabled_);
 
 	DBG_GUI_G << "Window builder: placed listbox '"
 		<< id << "' with defintion '"
@@ -147,14 +143,6 @@ twidget* tbuilder_listbox::build() const
  *                                     initial data for the listbox. Every row
  *                                     must have the same number of columns as
  *                                     the 'list_definition'.
- *
- *     linked_widgets_disabled (bool = false)
- *                                     Should the listbox automatically
- *                                     enable linked widgets? This feature is
- *                                     there for backwards compatibility and
- *                                     will be removed in the future. It needs
- *                                     to be set to true now since the old way
- *                                     is no longer supported.
  *
  * @end_table
  *
